# Yggdrasil

./: .gitignore  README.md  docker-compose.yml
api/: Cargo.toml  Dockerfile
api/src/: consts.rs  functions.rs  main.rs  router.rs
api/src/db/: connection.rs  mod.rs  queries.rs  table.rs
api/src/db/categories/: queries.rs
api/src/db/posts/: queries.rs
api/src/handlers/: categories.rs  mod.rs  posts.rs
api/src/models/: categorie_schema.rs  categories.rs  mod.rs  post_schema.rs  posts.rs
api/src/services/: categorie.rs  mod.rs  post.rs
db/: init.sql
frontend/: constants.ts  eslint.config.js  package-lock.json  package.json  tsconfig.json  types.d.ts
frontend/public/text/postsPage/: en.json
frontend/public/text/welcomePage/: en.json
frontend/src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/src/app/posts/: page.tsx
frontend/src/app/posts/[slug]/: page.tsx
frontend/src/components/footer/: footer.tsx
frontend/src/components/hover/: SpitlightLink.tsx  hoverFollow.tsx
frontend/src/components/logo/: logo.tsx
frontend/src/components/navbar/: nav.tsx
frontend/src/components/post/: post.tsx
frontend/src/components/theme/: themeSwitch.tsx  toggle.css
frontend/src/components/welcome/: welcome.tsx
frontend/src/utils/: api.ts  cookies.ts  formateDate.ts
yggdrasil/: package-lock.json  package.json
yggdrasil/.next/: trace
